<resources>
    <string name="app_name">KotlinWorkoutApp</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">Exercise name</string>
    <string name="finish">FINISH</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
</resources>