<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:padding="10dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_textSize_button"
        android:gravity="center"
        android:text="This will stop your workout. Are you sure you wish to quit? "
        android:padding="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/YesButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/yes"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/NoButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#B14C4C"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/no"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>